[gd_scene load_steps=42 format=2]

[ext_resource path="res://Sprites/Credits/ReturnButton2.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Credits/ReturnButton1.png" type="Texture" id=2]
[ext_resource path="res://SceneChangeButton.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Credits/ReturnButton3.png" type="Texture" id=4]
[ext_resource path="res://LargeFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Sprites/Options/OffButton2.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Options/OnButton1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Options/OffButton3.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Options/OffButton1.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Options/OnButton2.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Options/OnButton3.png" type="Texture" id=11]
[ext_resource path="res://Options/OnOffOption.gd" type="Script" id=12]
[ext_resource path="res://Sprites/Options/1xGreyButton1.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Options/2xGreyButton2.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Options/2xButton1.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Options/2xGreyButton1.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Options/1xButton2.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Options/2xButton2.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Options/2xButton3.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Options/1xButton1.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Options/1xGreyButton3.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Options/1xButton3.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Options/2xGreyButton3.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Options/1xGreyButton2.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Options/3xButton2.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Options/3xGreyButton1.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Options/3xGreyButton2.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Options/3xGreyButton3.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Options/3xButton1.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Options/3xButton3.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Options/4xButton3.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Options/4xGreyButton1.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Options/4xGreyButton2.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Options/4xGreyButton3.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Options/4xButton2.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Options/4xButton1.png" type="Texture" id=36]
[ext_resource path="res://Options/ResolutionOption.gd" type="Script" id=37]
[ext_resource path="res://Sprites/Options/ResetButton1.png" type="Texture" id=38]
[ext_resource path="res://Sprites/Options/ResetButton3.png" type="Texture" id=39]
[ext_resource path="res://Sprites/Options/ResetButton2.png" type="Texture" id=40]
[ext_resource path="res://Options/ResetProgressButton.gd" type="Script" id=41]

[node name="Options" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 0.125
margin_right = 160.0
margin_bottom = 144.125
color = Color( 0.388235, 0.607843, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnButton" type="TextureButton" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 13.0
margin_bottom = 13.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
change_to = "res://WorldSelect/WorldSelect.tscn"

[node name="Header" type="Label" parent="."]
margin_left = 51.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "- options -"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="Label" parent="."]
margin_left = 48.0
margin_top = 40.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Music:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX" type="Label" parent="."]
margin_left = 58.0
margin_top = 60.0
margin_right = 78.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SFX:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resolution" type="Label" parent="."]
margin_left = 22.6739
margin_top = 80.0
margin_right = 77.6739
margin_bottom = 94.1647
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Resolution:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicOption" type="Control" parent="."]
margin_left = 82.125
margin_top = 41.0
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}
state_key = "music"

[node name="OnButton" type="TextureButton" parent="MusicOption"]
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OffButton" type="TextureButton" parent="MusicOption"]
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SfxOption" type="Control" parent="."]
margin_left = 82.125
margin_top = 61.0
margin_right = 82.125
margin_bottom = 61.0
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}
state_key = "sfx"

[node name="OnButton" type="TextureButton" parent="SfxOption"]
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OffButton" type="TextureButton" parent="SfxOption"]
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResolutionOption" type="Control" parent="."]
margin_left = 82.0953
margin_top = 80.729
margin_right = 82.0953
margin_bottom = 80.729
script = ExtResource( 37 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1x" type="Control" parent="ResolutionOption"]
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ActiveButton" type="TextureButton" parent="ResolutionOption/1x"]
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 17 )

[node name="InactiveButton" type="TextureButton" parent="ResolutionOption/1x"]
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 21 )
texture_hover = ExtResource( 24 )

[node name="2x" type="Control" parent="ResolutionOption"]
margin_left = 18.3166
margin_top = 0.440308
margin_right = 18.3166
margin_bottom = 0.440308
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ActiveButton" type="TextureButton" parent="ResolutionOption/2x"]
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 18 )

[node name="InactiveButton" type="TextureButton" parent="ResolutionOption/2x"]
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 23 )
texture_hover = ExtResource( 14 )

[node name="3x" type="Control" parent="ResolutionOption"]
margin_left = 36.281
margin_top = -0.176117
margin_right = 36.281
margin_bottom = -0.176117
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ActiveButton" type="TextureButton" parent="ResolutionOption/3x"]
texture_normal = ExtResource( 29 )
texture_pressed = ExtResource( 30 )
texture_hover = ExtResource( 25 )

[node name="InactiveButton" type="TextureButton" parent="ResolutionOption/3x"]
texture_normal = ExtResource( 26 )
texture_pressed = ExtResource( 28 )
texture_hover = ExtResource( 27 )

[node name="4x" type="Control" parent="ResolutionOption"]
margin_left = 53.5408
margin_top = 0.440308
margin_right = 53.5408
margin_bottom = 0.440308
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ActiveButton" type="TextureButton" parent="ResolutionOption/4x"]
texture_normal = ExtResource( 36 )
texture_pressed = ExtResource( 31 )
texture_hover = ExtResource( 35 )

[node name="InactiveButton" type="TextureButton" parent="ResolutionOption/4x"]
texture_normal = ExtResource( 32 )
texture_pressed = ExtResource( 34 )
texture_hover = ExtResource( 33 )

[node name="ResetProgressButton" type="TextureButton" parent="."]
margin_left = 39.0989
margin_top = 101.182
margin_right = 122.099
margin_bottom = 116.182
texture_normal = ExtResource( 38 )
texture_pressed = ExtResource( 39 )
texture_hover = ExtResource( 40 )
script = ExtResource( 41 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sure" type="Label" parent="ResetProgressButton"]
visible = false
margin_left = -12.2404
margin_top = 16.1151
margin_right = 99.7596
margin_bottom = 38.1151
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.67451, 0.196078, 0.196078, 1 )
custom_constants/line_spacing = -4
text = "Press reset again if 
you're really sure"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ReturnButton" to="ReturnButton" method="_on_pressed"]
[connection signal="pressed" from="MusicOption/OnButton" to="MusicOption" method="_on_OnButton_pressed"]
[connection signal="pressed" from="MusicOption/OffButton" to="MusicOption" method="_on_OffButton_pressed"]
[connection signal="pressed" from="SfxOption/OnButton" to="SfxOption" method="_on_OnButton_pressed"]
[connection signal="pressed" from="SfxOption/OffButton" to="SfxOption" method="_on_OffButton_pressed"]
[connection signal="pressed" from="ResolutionOption/1x/InactiveButton" to="ResolutionOption" method="_on_1x_pressed"]
[connection signal="pressed" from="ResolutionOption/2x/InactiveButton" to="ResolutionOption" method="_on_2x_pressed"]
[connection signal="pressed" from="ResolutionOption/3x/InactiveButton" to="ResolutionOption" method="_on_3x_pressed"]
[connection signal="pressed" from="ResolutionOption/4x/InactiveButton" to="ResolutionOption" method="_on_4x_pressed"]
[connection signal="pressed" from="ResetProgressButton" to="ResetProgressButton" method="_on_ResetProgressButton_pressed"]
